--- a/settingdialog.ui
+++ b/settingdialog.ui
@@ -6,20 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>529</width>
-    <height>306</height>
+    <width>534</width>
+    <height>568</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0" colspan="3">
+   <item row="1" column="0" colspan="2">
     <widget class="QGroupBox" name="groupBox_software">
      <property name="title">
       <string>使用ソフトの設定</string>
      </property>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -136,9 +142,11 @@
        </item>
       </layout>
      </widget>
+     <zorder>layoutWidget</zorder>
+     <zorder>groupBox_folder</zorder>
     </widget>
    </item>
-   <item row="2" column="0" colspan="3">
+   <item row="7" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -146,6 +154,76 @@
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
+    </widget>
+   </item>
+   <item row="6" column="0" colspan="2">
+    <widget class="QGroupBox" name="groupBox_folder">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>16777158</height>
+      </size>
+     </property>
+     <property name="title">
+      <string>フォルダの設定</string>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+     <widget class="QWidget" name="">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>491</width>
+        <height>58</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_6">
+         <item>
+          <widget class="QLabel" name="label_tempfolder">
+           <property name="text">
+            <string>一時フォルダの設定</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEdit_tempfolder"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_tempfolder">
+           <property name="text">
+            <string>設定</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_7">
+         <item>
+          <widget class="QLabel" name="label_outputfolder">
+           <property name="text">
+            <string>出力フォルダの設定</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEdit_outputfolder"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_outputfolder">
+           <property name="text">
+            <string>設定</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
   </layout>
@@ -159,8 +237,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>227</x>
-     <y>288</y>
+     <x>236</x>
+     <y>558</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -175,8 +253,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>295</x>
-     <y>294</y>
+     <x>304</x>
+     <y>558</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
